[package]
name = "Asheraflow"
version = "0.1.0"
edition = "2021"
description = "AsheraFlow - A Git-like version control system with sprint management features"
authors = ["Spac Alexandru <your.email@example.com>"]

[[bin]]
name = "ash"
path = "src/main.rs"

[dependencies]
sha1 = "0.10.6"
flate2 = "1.0.28"
rand = "0.8.5"
chrono = "0.4.31"
itertools = "0.10"
regex = "1.9.1" 
hex = "0.4"
tempfile = "3.3.0"
walkdir = "2.3.2"
assert_cmd = "2.0.11"
predicates = "2.1.5"
atty = "0.2"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
crossterm = "0.26"
tui = { package = "ratatui", version = "0.23.0" }
uuid = { version = "1.5.0", features = ["v4"] }
num_cpus = "1.16.0"
tempdir = "0.3.7"
log = "0.4.20"
colored = "2.0.4"
termion = "2.0.1"